--- a/translations/en.json
+++ b/translations/en.json
@@ -1,4 +1,5 @@
 {
+  "resultCount": "{count, number} {count, plural, one {Record found} other {Records found}}",
   "item.availability": "Availability",
   "item.availability.itemStatus": "Item status",
   "item.availability.itemStatusDate": "Item status date",
