--- a/translations/en.json
+++ b/translations/en.json
@@ -6,5 +6,140 @@
   "item.availability.requests": "Requests",
   "item.availability.borrower": "Borrower",
   "item.availability.loanDate": "Loan date",
-  "item.availability.dueDate": "Due date"
+  "item.availability.dueDate": "Due date",
+  "fillIn": "Please fill this in to continue",
+  "selectToContinue": "Please select to continue",
+  "barcodeTaken": "This barcode has already been taken",
+  "createInstance": "Create Instance",
+  "updateInstance": "Update Instance",
+  "itemRecord": "Item Record",
+  "copyInstance": "Copy Instance",
+  "editInstance": "Edit Instance",
+  "showNotes": "Show Notes",
+  "instanceDetails": "Instance Details",
+  "addHoldings": "+ Add holdings",
+  "itemDotStatus": "Item . {status}",
+  "instance": "Instance:",
+  "holdings": "Holdings",
+  "holdingsColon": "Holdings:",
+
+  "alternativeTitles": "Alternative titles",
+  "addAlternativeTitles": "+ Add alternative title",
+  "classifications": "Classifications",
+  "addClassifications": "+ Add classification",
+  "selectClassification": "Select classification type",
+  "number": "Number *",
+  "type": "Type *",
+  "contributors": "Contributors",
+  "addContributors": "+ Add contributor",
+  "description": "Description",
+  "descriptions": "Descriptions",
+  "addDescription": "+ Add description",
+  "permanentLocation": "Permanent Location",
+  "selectPlatform": "Select platform",
+  "platform": "Platform",
+  "uri": "URI",
+  "callNumber": "Call number",
+  "identifier": "Identifier *",
+  "identifiers": "Identifiers",
+  "addIdentifier": "+ Add identifier",
+  "title": "Title *",
+  "resourceType": "Resource type *",
+  "selectResourceType": "Select resource type",
+  "format": "Format",
+  "selectFormat": "Select format",
+  "edition": "Edition",
+  "titleData": "Title data",
+  "instanceRecord": "Instance Record",
+  "contentData": "Content data",
+  "descriptiveData": "Descriptive data",
+  "materialType": "Material Type *",
+  "selectMaterialType": "Select material type",
+  "selectLoanType": "Select loan type",
+  "loanTypePermanent": "Loan Type (Permanent) *",
+  "barcode": "Barcode",
+  "temporaryLocation": "Temporary Location",
+  "selectTemporaryLocation": "Select temporary location",
+  "status": "Status",
+  "loanTypeTemporary": "Loan Type (Temporary)",
+  "enumeration": "Enumeration",
+  "chronology": "Chronology",
+  "numberOfPieces": "Number of pieces",
+  "language": "Language",
+  "languages": "Languages",
+  "addLanguage": "+ Add language",
+  "selectLanguage": "Select language",
+  "note": "Note",
+  "notes": "Notes",
+  "addNote": "+ Add note",
+  "addNotes": "Add Notes",
+  "removeNotes": "Remove Notes {num}",
+  "remove": "Remove",
+  "publications": "Publications",
+  "addPublication": "+ Add publication",
+  "seriesStatements": "Series statements",
+  "addSeries": "+ Add series",
+  "subjects": "Subjects",
+  "addSubject": "+ Add subject",
+  "url": "URL",
+  "urls": "URLs",
+  "addUrl": "+ Add URL",
+  "items": "Items",
+  "addNewItemDialog": "Add New Item Dialog",
+  "loanTypes": "Loan Types",
+  "loanType": "Loan Type",
+  "loans": "Loans",
+  "materialTypes": "Material Types",
+  "materialType": "Material Type",
+  "holdingsHeader": "Holdings: {location} > {callNumber}",
+  "viewHoldings": "View holdings",
+  "holdingsRecord": "Holdings Record",
+  "viewHoldingsRecord": "View Holdings Record",
+  "holdingsData": "Holdings data",
+  "holdingsId": "Holdings ID",
+  "holdingsStatement": "Holdings Statement",
+  "holdingsStatements": "Holdings statements",
+  "removeStatement": "Remove statement {num}",
+  "deleteStatement": "Delete Statement",
+  "editHoldingsRecordDialog": "Edit Holdings Record Dialog",
+  "copyHoldingsRecordDialog": "Copy Holdings Record Dialog",
+  "createHoldingsRecord": "Create New Holdings Record",
+  "updateHoldingsRecord": "Update Holdings Record",
+  "copyHolding": "Copy Holding",
+  "editHoldings": "Edit Holdings",
+  "instanceData": "Instance data",
+  "instanceId": "Instance ID",
+  "metadataSource": "Metadata source",
+  "tba": "TBA",
+  "resourceIdentifier": "Resource identifier",
+  "resourceTitle": "Resource title",
+  "alternativeTitles": "Alternative titles",
+  "contributor": "Contributor",
+  "publisher": "Publisher",
+  "place": "Place",
+  "date": "Date",
+  "resourceType": "Resource type",
+  "physicalDescription": "Physical description",
+  "language": "Language",
+  "subjectHeadings": "Subject headings",
+  "classification": "Classification",
+  "notes": "Notes",
+  "edition": "Edition",
+  "seriesStatement": "Series Statement",
+  "editInstanceDialog": "Edit Instance Dialog",
+  "addNewHoldingsDialog": "Add New Holdings Dialog",
+  "addItem": "+ Add item",
+  "viewItem": "View Item",
+  "itemData": "Item data",
+  "itemId": "Item ID",
+  "temporaryLocation": "Temporary location",
+  "permanentLoantype": "Permanent loantype",
+  "temporaryLoantype": "Temporary loantype",
+  "enumeration": "Enumeration",
+  "pieceIdentifier": "Piece identifier",
+  "pieceIdentifiers": "Piece identifiers",
+  "addPieceIdentifier": "Add piece identifier",
+  "removeIdentifier": "Remove identifier {num}",
+  "editItemDialog": "Edit Item Dialog",
+  "copyItemDialog": "Copy Item Dialog"
 }
