--- a/translations/en.json
+++ b/translations/en.json
@@ -36,6 +36,7 @@
   "physicalDescriptions": "Physical descriptions",
   "addDescription": "+ Add description",
   "permanentLocation": "Permanent Location",
+  "selectPermanentLocation": "Select permanent location",
   "selectPlatform": "Select platform",
   "platform": "Platform",
   "uri": "URI",
