Split Settings into sections

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,4 +1,5 @@
 {
+  "inventory.label": "Inventory",
   "resultCount": "{count, number} {count, plural, one {Record found} other {Records found}}",
   "item.availability": "Availability",
   "item.availability.itemStatus": "Item status",
