Holdings: Add temporary location to form and view UIIN-194

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -37,8 +37,14 @@
   "physicalDescription": "Physical description",
   "physicalDescriptions": "Physical descriptions",
   "addDescription": "+ Add description",
+  "location": "Location",
+  "holdingsLocation": "Holdings location",
   "permanentLocation": "Permanent Location",
+  "temporaryLocation": "Temporary Location",
+  "permanent": "Permanent",
+  "temporary": "Temporary",
   "selectPermanentLocation": "Select permanent location",
+  "selectTemporaryLocation": "Select temporary location",
   "selectPlatform": "Select platform",
   "platform": "Platform",
   "uri": "URI",
