--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -39,12 +39,14 @@
   "addDescription": "+ Add description",
   "location": "Location",
   "holdingsLocation": "Holdings location",
+  "itemLocation": "Item location",
   "permanentLocation": "Permanent Location",
   "temporaryLocation": "Temporary Location",
   "permanent": "Permanent",
   "temporary": "Temporary",
   "selectPermanentLocation": "Select permanent location",
   "selectTemporaryLocation": "Select temporary location",
+  "inheritFromHoldings": "Inherit from holdings",
   "selectPlatform": "Select platform",
   "platform": "Platform",
   "uri": "URI",
