Display effective location UIIN-196

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -40,8 +40,9 @@
   "location": "Location",
   "holdingsLocation": "Holdings location",
   "itemLocation": "Item location",
-  "permanentLocation": "Permanent Location",
-  "temporaryLocation": "Temporary Location",
+  "permanentLocation": "Permanent location",
+  "temporaryLocation": "Temporary location",
+  "effectiveLocation": "Effective location for item",
   "permanent": "Permanent",
   "temporary": "Temporary",
   "selectPermanentLocation": "Select permanent location",
