Handle array properties containing null graciously UIIN-207 UIIN-212
  Also: prevent null-language from being submitted
        prevent all-empty publication object from being submitted

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -11,6 +11,7 @@
   "item.availability.dueDate": "Due date",
   "fillIn": "Please fill this in to continue",
   "selectToContinue": "Please select to continue",
+  "onePublicationFieldToContinue": "Please fill in one or more publication fields to continue",
   "barcodeTaken": "This barcode has already been taken",
   "createInstance": "Create Instance",
   "updateInstance": "Update Instance",
