Add missing required-asterisks UIIN-221
  .. and move asterisk from translation file to forms

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -31,8 +31,8 @@
   "classifications": "Classifications",
   "addClassifications": "+ Add classification",
   "selectClassification": "Select classification type",
-  "number": "Number *",
-  "type": "Type *",
+  "number": "Number",
+  "type": "Type",
   "contributors": "Contributors",
   "addContributors": "+ Add contributor",
   "physicalDescription": "Physical description",
@@ -53,10 +53,10 @@
   "platform": "Platform",
   "uri": "URI",
   "callNumber": "Call number",
-  "identifier": "Identifier *",
+  "identifier": "Identifier",
   "identifiers": "Identifiers",
   "addIdentifier": "+ Add identifier",
-  "title": "Title *",
+  "title": "Title",
   "selectResourceType": "Select resource type",
   "formats": "Formats",
   "format": "Format",
@@ -68,7 +68,7 @@
   "descriptiveData": "Descriptive data",
   "selectMaterialType": "Select material type",
   "selectLoanType": "Select loan type",
-  "loanTypePermanent": "Loan Type (Permanent) *",
+  "loanTypePermanent": "Loan Type (Permanent)",
   "barcode": "Barcode",
   "status": "Status",
   "loanTypeTemporary": "Loan Type (Temporary)",
