relpace default Inherit from holdings to - for permanent and temp locations, refs UIIN-218

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -47,8 +47,9 @@
   "effectiveLocation": "Effective location for item",
   "permanent": "Permanent",
   "temporary": "Temporary",
-  "selectPermanentLocation": "Select permanent location",
+  "selectPermanenLocation": "Select permanent location",
   "selectTemporaryLocation": "Select temporary location",
+  "selectLocation": "Select location",
   "inheritFromHoldings": "Inherit from holdings",
   "selectPlatform": "Select platform",
   "platform": "Platform",
