Add initial version of source view UIIN-93

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -138,6 +138,7 @@
   "addNewHoldingsDialog": "Add New Holdings Dialog",
   "addItem": "+ Add item",
   "viewItem": "View Item",
+  "viewSource": "View source",
   "itemData": "Item data",
   "itemId": "Item ID",
   "permanentLoantype": "Permanent loantype",
