reorder elements in Item Record

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -2,7 +2,7 @@
   "meta.title": "Inventory",
   "inventory.label": "Inventory",
   "resultCount": "{count, number} {count, plural, one {Record found} other {Records found}}",
-  "item.availability": "Availability",
+  "item.availability": "Loan data and availability",
   "item.availability.itemStatus": "Item status",
   "item.availability.itemStatusDate": "Item status date",
   "item.availability.requests": "Requests",
@@ -42,8 +42,8 @@
   "location": "Location",
   "holdingsLocation": "Holdings location",
   "itemLocation": "Item location",
-  "permanentLocation": "Permanent location",
-  "temporaryLocation": "Temporary location",
+  "permanentLocation": "Permanent",
+  "temporaryLocation": "Temporary",
   "effectiveLocation": "Effective location for item",
   "permanent": "Permanent",
   "temporary": "Temporary",
@@ -72,9 +72,11 @@
   "selectLoanType": "Select loan type",
   "loanTypePermanent": "Loan Type (Permanent)",
   "barcode": "Barcode",
+  "itemBarcode": "Item barcode",
   "status": "Status",
   "loanTypeTemporary": "Loan Type (Temporary)",
   "enumeration": "Enumeration",
+  "enumerationData": "Enumeration data",
   "chronology": "Chronology",
   "numberOfPieces": "Number of pieces",
   "language": "Language",
@@ -83,6 +85,7 @@
   "selectLanguage": "Select language",
   "note": "Note",
   "notes": "Notes",
+  "itemPublicNote": "Item public note",
   "addNote": "+ Add note",
   "addNotes": "Add Notes",
   "removeNotes": "Remove Notes {num}",
@@ -141,10 +144,11 @@
   "viewSource": "View source",
   "itemData": "Item data",
   "itemId": "Item ID",
+  "itemHrid": "Item HRID",
   "permanentLoantype": "Permanent loantype",
   "temporaryLoantype": "Temporary loantype",
   "pieceIdentifier": "Piece identifier",
-  "pieceIdentifiers": "Piece identifiers",
+  "pieceIdentifiers": "Copy number",
   "addPieceIdentifier": "Add piece identifier",
   "removeIdentifier": "Remove identifier {num}",
   "editItemDialog": "Edit Item Dialog",
@@ -153,5 +157,9 @@
   "confirmLocation.message": "This location has a status of inactive. Are you sure you want to select this location?",
   "confirmLocation.header": "Inactive location",
   "contributorType": "Contributor type",
-  "contributorTypes": "Contributor types"
+  "contributorTypes": "Contributor types",
+  "administrativeData": "Administrative data",
+  "itemNotes": "Item notes",
+  "itemCallNumber": "Item Call number",
+  "holdingsNotes": "Holdings notes"
 }
