--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -109,6 +109,7 @@
   "viewHoldingsRecord": "View Holdings Record",
   "holdingsData": "Holdings data",
   "holdingsId": "Holdings ID",
+  "holdingsHrid": "Holdings HRID",
   "holdingsStatement": "Holdings Statement",
   "holdingsStatements": "Holdings statements",
   "removeStatement": "Remove statement {num}",
@@ -153,5 +154,7 @@
   "confirmLocation.message": "This location has a status of inactive. Are you sure you want to select this location?",
   "confirmLocation.header": "Inactive location",
   "contributorType": "Contributor type",
-  "contributorTypes": "Contributor types"
+  "contributorTypes": "Contributor types",
+  "electronicAccess": "Electronic Access",
+  "administrativeData": "Administrative data"
 }
