UIIN-166.1 merge after mod-inventory

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -12,6 +12,8 @@
   "fillIn": "Please fill this in to continue",
   "selectToContinue": "Please select to continue",
   "onePublicationFieldToContinue": "Please fill in one or more publication fields to continue",
+  "onePrecedingTitleFieldToContinue": "Please fill in one or more preceding title fields to continue",
+  "oneSucceedingTitleFieldToContinue": "Please fill in one or more succeeding title fields to continue",
   "barcodeTaken": "This barcode has already been taken",
   "createInstance": "Create Instance",
   "updateInstance": "Update Instance",
@@ -89,6 +91,10 @@
   "remove": "Remove",
   "publications": "Publications",
   "addPublication": "+ Add publication",
+  "addPrecedingTitle": "+ Add preceding title",
+  "addSucceedingTitle": "+ Add succeeding title",
+  "precedingTitle": "Preceding title",
+  "succeedingTitle": "Succeeding title",
   "seriesStatements": "Series statements",
   "addSeries": "+ Add series",
   "subjects": "Subjects",
@@ -120,14 +126,17 @@
   "copyHolding": "Copy Holding",
   "editHoldings": "Edit Holdings",
   "instanceData": "Administrative data",
+  "administrativeData": "Administrative data",
   "instanceId": "Instance ID",
   "instanceHrid": "Instance HRID",
   "metadataSource": "Metadata source",
   "tba": "TBA",
   "resourceIdentifier": "Resource identifier",
   "resourceTitle": "Resource title",
+  "indexTitle": "Index title",
   "contributor": "Contributor",
   "publisher": "Publisher",
+  "role": "Role",
   "place": "Place",
   "date": "Date",
   "resourceType": "Resource type",
@@ -155,5 +164,7 @@
   "confirmLocation.header": "Inactive location",
   "contributorType": "Contributor type",
   "contributorTypes": "Contributor types",
+  "isbn": "ISBN",
+  "issn": "ISSN",
   "electronicAccess": "Electronic access"
 }
