Add electronic access to form UIIN-229

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -126,12 +126,22 @@
   "instanceData": "Administrative data",
   "instanceId": "Instance ID",
   "instanceHrid": "Instance HRID",
+  "modeOfIssuance": "Mode of issuance",
   "metadataSource": "Metadata source",
   "tba": "TBA",
+  "catalogedDate": "Cataloged date",
+  "instanceStatusTerm": "Instance status term",
+  "instanceStatusCode": "Instance status code",
+  "instanceStatusSource": "Instance status source",
+  "urlRelationship": "Relationship",
+  "linkText": "Link text",
+  "urlPublicNote": "URL public note",
+  "materialsSpecification": "Materials specified",
   "resourceIdentifier": "Resource identifier",
   "resourceTitle": "Resource title",
   "contributor": "Contributor",
   "publisher": "Publisher",
+  "publisherRole": "Publisher role",
   "place": "Place",
   "date": "Date",
   "resourceType": "Resource type",
