Add publication frequency and range to view and edit UIIN-227

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -39,6 +39,10 @@
   "physicalDescription": "Physical description",
   "physicalDescriptions": "Physical descriptions",
   "addDescription": "+ Add description",
+  "publicationFrequency": "Publication frequency",
+  "addPublicationFrequency": "+ Add frequency",
+  "addPublicationRange": "+ Add range",
+  "publicationRange": "Publication range",
   "location": "Location",
   "holdingsLocation": "Holdings location",
   "itemLocation": "Item location",
