--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -132,13 +132,18 @@
   "instanceData": "Administrative data",
   "instanceId": "Instance ID",
   "instanceHrid": "Instance HRID",
+  "instanceStatus": "Instance status term",
+  "selectInstanceStatus": "Select instance status",
   "modeOfIssuance": "Mode of issuance",
+  "selectModeOfIssuance": "Select mode of issuance",
   "metadataSource": "Metadata source",
   "tba": "TBA",
   "catalogedDate": "Cataloged date",
   "instanceStatusTerm": "Instance status term",
   "instanceStatusCode": "Instance status code",
   "instanceStatusSource": "Instance status source",
+  "catalogingLevel": "Cataloging level",
+  "selectCatalogingLevel": "Select level",
   "electronicAccess": "Electronic access",
   "addElectronicAccess": "+ Add electronic access",
   "urlRelationship": "Relationship",
