Add/modify cataloged date, level, status update date, UIIN-223

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -142,6 +142,7 @@
   "instanceStatusTerm": "Instance status term",
   "instanceStatusCode": "Instance status code",
   "instanceStatusSource": "Instance status source",
+  "instanceStatusUpdatedDate": "Status updated date",
   "catalogingLevel": "Cataloging level",
   "selectCatalogingLevel": "Select level",
   "electronicAccess": "Electronic access",
