--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -13,6 +13,7 @@
   "selectToContinue": "Please select to continue",
   "onePublicationFieldToContinue": "Please fill in one or more publication fields to continue",
   "barcodeTaken": "This barcode has already been taken",
+  "hridTaken": "This HRID has already been taken",
   "createInstance": "Create Instance",
   "updateInstance": "Update Instance",
   "itemRecord": "Item Record",
