Added columnMapping and translated strings for the Instances MCL (SearchAndSort).

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -1,6 +1,9 @@
 {
   "meta.title": "Inventory",
   "inventory.label": "Inventory",
+  "instances.columns.title": "Title",
+  "instances.columns.contributors": "Contributors",
+  "instances.columns.publishers": "Publishers",
   "resultCount": "{count, number} {count, plural, one {Record found} other {Records found}}",
   "item.availability": "Loan data and availability",
   "item.availability.itemStatus": "Item status",
