Updated columnMapping after merging with latest master.

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -4,6 +4,7 @@
   "instances.columns.title": "Title",
   "instances.columns.contributors": "Contributors",
   "instances.columns.publishers": "Publishers",
+  "instances.columns.relation": "Relation",
   "resultCount": "{count, number} {count, plural, one {Record found} other {Records found}}",
   "item.availability": "Loan data and availability",
   "item.availability.itemStatus": "Item status",
