--- a/translations/ui-inventory/da.json
+++ b/translations/ui-inventory/da.json
@@ -185,7 +185,5 @@
     "addElectronicAccess": "+ Add electronic access",
     "instanceStatus": "Instance status term",
     "selectInstanceStatus": "Select instance status",
-    "selectModeOfIssuance": "Select mode of issuance",
-    "catalogingLevel": "Cataloging level",
-    "selectCatalogingLevel": "Select level"
+    "selectModeOfIssuance": "Select mode of issuance"
 }
