Add translation for `editions` UIIN-299

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -74,7 +74,8 @@
   "formats": "Formats",
   "format": "Format",
   "selectFormat": "Select format",
-  "edition": "Edition",
+  "editions": "Editions",
+  "addEdition": "+ Add edition",
   "titleData": "Title data",
   "instanceRecord": "Instance Record",
   "contentData": "Content data",
