Add fields source, indexTitle to Instance form UIIN-318

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -70,6 +70,7 @@
   "identifiers": "Identifiers",
   "addIdentifier": "+ Add identifier",
   "title": "Title",
+  "indexTitle": "Index title",
   "selectResourceType": "Select resource type",
   "formats": "Formats",
   "format": "Format",
