Move analytics relationships down to own accordion UIIN-318
  Details page and form

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -194,5 +194,6 @@
   "itemNotes": "Item notes",
   "itemCallNumber": "Item Call number",
   "holdingsNotes": "Holdings notes",
-  "otherRelatedInstances": "Other related instances"
+  "otherRelatedInstances": "Other related instances",
+  "instanceRelationships": "Instance relationships"
 }
