Make all English strings sentence case

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -5,7 +5,7 @@
   "instances.columns.contributors": "Contributors",
   "instances.columns.publishers": "Publishers",
   "instances.columns.relation": "Relation",
-  "resultCount": "{count, number} {count, plural, one {Record found} other {Records found}}",
+  "resultCount": "{count, number} {count, plural, one {record found} other {records found}}",
   "item.availability": "Loan data and availability",
   "item.availability.itemStatus": "Item status",
   "item.availability.itemStatusDate": "Item status date",
@@ -18,12 +18,12 @@
   "onePublicationFieldToContinue": "Please fill in one or more publication fields to continue",
   "barcodeTaken": "This barcode has already been taken",
   "hridTaken": "This HRID has already been taken",
-  "createInstance": "Create Instance",
-  "updateInstance": "Update Instance",
-  "itemRecord": "Item Record",
-  "copyInstance": "Copy Instance",
-  "editInstance": "Edit Instance",
-  "instanceDetails": "Instance Details",
+  "createInstance": "Create instance",
+  "updateInstance": "Update instance",
+  "itemRecord": "Item record",
+  "copyInstance": "Copy instance",
+  "editInstance": "Edit instance",
+  "instanceDetails": "Instance details",
   "addHoldings": "+ Add holdings",
   "itemDotStatus": "Item . {status}",
   "instances": "Instances",
@@ -77,16 +77,16 @@
   "editions": "Editions",
   "addEdition": "+ Add edition",
   "titleData": "Title data",
-  "instanceRecord": "Instance Record",
+  "instanceRecord": "Instance record",
   "contentData": "Content data",
   "descriptiveData": "Descriptive data",
   "selectMaterialType": "Select material type",
   "selectLoanType": "Select loan type",
-  "loanTypePermanent": "Loan Type (Permanent)",
+  "loanTypePermanent": "Loan type (permanent)",
   "barcode": "Barcode",
   "itemBarcode": "Item barcode",
   "status": "Status",
-  "loanTypeTemporary": "Loan Type (Temporary)",
+  "loanTypeTemporary": "Loan type (temporary)",
   "enumeration": "Enumeration",
   "enumerationData": "Enumeration data",
   "chronology": "Chronology",
@@ -100,7 +100,7 @@
   "itemPublicNote": "Item public note",
   "addNote": "+ Add note",
   "addNotes": "Add Notes",
-  "removeNotes": "Remove Notes {num}",
+  "removeNotes": "Remove notes {num}",
   "remove": "Remove",
   "publications": "Publications",
   "addPublication": "+ Add publication",
@@ -112,7 +112,7 @@
   "urls": "URLs",
   "addUrl": "+ Add URL",
   "items": "Items",
-  "addNewItemDialog": "Add New Item Dialog",
+  "addNewItemDialog": "Add new item dialog",
   "loanTypes": "Loan types",
   "loanType": "Loan type",
   "loans": "Loans",
@@ -120,21 +120,21 @@
   "materialType": "Material type",
   "holdingsHeader": "Holdings: {location} > {callNumber}",
   "viewHoldings": "View holdings",
-  "holdingsRecord": "Holdings Record",
-  "viewHoldingsRecord": "View Holdings Record",
+  "holdingsRecord": "Holdings record",
+  "viewHoldingsRecord": "View holdings record",
   "holdingsData": "Holdings data",
   "holdingsId": "Holdings ID",
   "holdingsHrid": "Holdings HRID",
-  "holdingsStatement": "Holdings Statement",
+  "holdingsStatement": "Holdings statement",
   "holdingsStatements": "Holdings statements",
   "removeStatement": "Remove statement {num}",
-  "deleteStatement": "Delete Statement",
-  "editHoldingsRecordDialog": "Edit Holdings Record Dialog",
-  "copyHoldingsRecordDialog": "Copy Holdings Record Dialog",
-  "createHoldingsRecord": "Create New Holdings Record",
-  "updateHoldingsRecord": "Update Holdings Record",
-  "copyHolding": "Copy Holding",
-  "editHoldings": "Edit Holdings",
+  "deleteStatement": "Delete statement",
+  "editHoldingsRecordDialog": "Edit holdings record dialog",
+  "copyHoldingsRecordDialog": "Copy holdings record dialog",
+  "createHoldingsRecord": "Create new holdings record",
+  "updateHoldingsRecord": "Update holdings record",
+  "copyHolding": "Copy holding",
+  "editHoldings": "Edit holdings",
   "instanceData": "Administrative data",
   "instanceId": "Instance ID",
   "instanceHrid": "Instance HRID",
@@ -168,10 +168,10 @@
   "subjectHeadings": "Subject headings",
   "classification": "Classification",
   "seriesStatement": "Series Statement",
-  "editInstanceDialog": "Edit Instance Dialog",
-  "addNewHoldingsDialog": "Add New Holdings Dialog",
+  "editInstanceDialog": "Edit instance dialog",
+  "addNewHoldingsDialog": "Add new holdings dialog",
   "addItem": "+ Add item",
-  "viewItem": "View Item",
+  "viewItem": "View item",
   "viewSource": "View source",
   "itemData": "Item data",
   "itemId": "Item ID",
@@ -182,8 +182,8 @@
   "pieceIdentifiers": "Copy number",
   "addPieceIdentifier": "Add piece identifier",
   "removeIdentifier": "Remove identifier {num}",
-  "editItemDialog": "Edit Item Dialog",
-  "copyItemDialog": "Copy Item Dialog",
+  "editItemDialog": "Edit item dialog",
+  "copyItemDialog": "Copy item dialog",
   "confirmLocation.selectBtn": "Select",
   "confirmLocation.message": "This location has a status of inactive. Are you sure you want to select this location?",
   "confirmLocation.header": "Inactive location",
@@ -191,7 +191,7 @@
   "contributorTypes": "Contributor types",
   "administrativeData": "Administrative data",
   "itemNotes": "Item notes",
-  "itemCallNumber": "Item Call number",
+  "itemCallNumber": "Item call number",
   "holdingsNotes": "Holdings notes",
   "otherRelatedInstances": "Other related instances",
   "instanceRelationships": "Instance relationships"
