Convert `instanceFormatId` to repeatable `instanceFormatIds` UIIN-330

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -76,7 +76,12 @@
   "format": "Format",
   "selectFormat": "Select format",
   "editions": "Editions",
+  "edition": "Edition",
   "addEdition": "+ Add edition",
+  "instanceFormat": "Format",
+  "instanceFormats": "Formats",
+  "addInstanceFormat": "+ Add format",
+  "selectInstanceFormat": "Select format",
   "titleData": "Title data",
   "instanceRecord": "Instance Record",
   "contentData": "Content data",
