Instance view: Add properties from ref table, resource type UIIN-344

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -71,6 +71,9 @@
   "title": "Title",
   "indexTitle": "Index title",
   "selectResourceType": "Select resource type",
+  "resourceTypeTerm": "Resource type term",
+  "resourceTypeCode": "Resource type code",
+  "resourceTypeSource": "Resource type source",
   "formats": "Formats",
   "format": "Format",
   "selectFormat": "Select format",
