Add accordions, holdings record view UIIN-168

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -50,6 +50,7 @@
   "addPublicationRange": "+ Add range",
   "publicationRange": "Publication range",
   "location": "Location",
+  "locations": "Locations",
   "holdingsLocation": "Holdings location",
   "itemLocation": "Item location",
   "permanentLocation": "Permanent",
@@ -127,6 +128,9 @@
   "materialTypes": "Material types",
   "materialType": "Material type",
   "holdingsHeader": "Holdings: {location} > {callNumber}",
+  "holdingsDetails": "Holdings details",
+  "acquisitions": "Acquisitions",
+  "receivingHistory": "Receiving history",
   "viewHoldings": "View holdings",
   "holdingsRecord": "Holdings record",
   "viewHoldingsRecord": "View holdings record",
