Add new holdings properties, details accordion UIIN-234
  Non-breaking, non-reference-table based properties added.

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -129,6 +129,7 @@
   "materialType": "Material type",
   "holdingsHeader": "Holdings: {location} > {callNumber}",
   "holdingsDetails": "Holdings details",
+  "numberOfItems": "Number of items",
   "acquisitions": "Acquisitions",
   "receivingHistory": "Receiving history",
   "viewHoldings": "View holdings",
