Add properties, holdings form, details accordion UIIN-234

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -140,6 +140,14 @@
   "holdingsHrid": "Holdings HRID",
   "holdingsStatement": "Holdings statement",
   "holdingsStatements": "Holdings statements",
+  "holdingsStatementForIndexes": "Holdings statement for indexes",
+  "holdingsStatementsForIndexes": "Holdings statements for indexes",
+  "holdingsStatementForIndexesNote": "Holdings statement for indexes note",
+  "holdingsStatementsForIndexesNote": "Holdings statements for indexes notes",
+  "holdingsStatementForSupplements": "Holdings statement for supplements",
+  "holdingsStatementsForSupplements": "Holdings statements for supplements",
+  "holdingsStatementForSupplementsNote": "Holdings statement for supplements note",
+  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes",
   "removeStatement": "Remove statement {num}",
   "deleteStatement": "Delete statement",
   "editHoldingsRecordDialog": "Edit holdings record dialog",
