Add ID properties, holdings view UIIN-232

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -138,6 +138,7 @@
   "holdingsData": "Holdings data",
   "holdingsId": "Holdings ID",
   "holdingsHrid": "Holdings HRID",
+  "formerHoldingsId": "Former holdings ID",
   "holdingsStatement": "Holdings statement",
   "holdingsStatements": "Holdings statements",
   "holdingsStatementForIndexes": "Holdings statement for indexes",
@@ -147,7 +148,7 @@
   "holdingsStatementForSupplements": "Holdings statement for supplements",
   "holdingsStatementsForSupplements": "Holdings statements for supplements",
   "holdingsStatementForSupplementsNote": "Holdings statement for supplements note",
-  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes",
+  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes", 
   "removeStatement": "Remove statement {num}",
   "deleteStatement": "Delete statement",
   "editHoldingsRecordDialog": "Edit holdings record dialog",
