Add properties holdings view, locations accordion UIIN-233

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -65,7 +65,12 @@
   "selectPlatform": "Select platform",
   "platform": "Platform",
   "uri": "URI",
+  "holdingsCallNumber": "Holdings call number",
+  "copyNumber": "Copy number",
+  "callNumberType": "Call number type",
+  "callNumberPrefix": "Call number prefix",
   "callNumber": "Call number",
+  "callNumberSuffix": "Call number suffix",
   "identifier": "Identifier",
   "identifiers": "Identifiers",
   "addIdentifier": "+ Add identifier",
