Add properties, holdings view and form, notes accordion UIIN-235

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -73,6 +73,8 @@
   "callNumberPrefix": "Call number prefix",
   "callNumber": "Call number",
   "callNumberSuffix": "Call number suffix",
+  "holdingsNotes": "Holdings notes",
+  "publicNote": "Public note",
   "identifier": "Identifier",
   "identifiers": "Identifiers",
   "addIdentifier": "+ Add identifier",
@@ -158,6 +160,16 @@
   "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes", 
   "removeStatement": "Remove statement {num}",
   "deleteStatement": "Delete statement",
+  "publicNote": "Public note",
+  "nonPublicNote": "Nonpublic note",
+  "actionNote": "Action note",
+  "reproductionNote": "Reproduction note",
+  "binding": "Binding",
+  "provenance": "Provenance",
+  "copyNotes": "Copy notes",
+  "acquisitionMethod": "Acquisition method",
+  "acquisitionFormat": "Acquisition format",
+  "electronicBookplate": "Electronic bookplate",
   "editHoldingsRecordDialog": "Edit holdings record dialog",
   "copyHoldingsRecordDialog": "Copy holdings record dialog",
   "createHoldingsRecord": "Create new holdings record",
@@ -221,7 +233,6 @@
   "administrativeData": "Administrative data",
   "itemNotes": "Item notes",
   "itemCallNumber": "Item call number",
-  "holdingsNotes": "Holdings notes",
   "otherRelatedInstances": "Other related instances",
   "instanceRelationships": "Instance relationships",
   "copyItem": "Copy item"
