Refactor data structure, holdings notes UIIN-235

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -160,6 +160,8 @@
   "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes", 
   "removeStatement": "Remove statement {num}",
   "deleteStatement": "Delete statement",
+  "noteType": "Note type",
+  "staffOnly": "Staff only",
   "publicNote": "Public note",
   "nonPublicNote": "Nonpublic note",
   "actionNote": "Action note",
@@ -167,6 +169,7 @@
   "binding": "Binding",
   "provenance": "Provenance",
   "copyNotes": "Copy notes",
+  "receiptStatus": "Receipt status",
   "acquisitionMethod": "Acquisition method",
   "acquisitionFormat": "Acquisition format",
   "electronicBookplate": "Electronic bookplate",
